--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.6.6"
+    "apexcharts": "^3.4.1",
+    "vue": "^2.6.6",
+    "vue-apexcharts": "^1.2.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
