--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "apexcharts": "^3.4.1",
+    "es6-promise": "^4.2.6",
     "vue": "^2.6.6",
-    "vue-apexcharts": "^1.2.9"
+    "vue-apexcharts": "^1.2.9",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
