--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "apexcharts": "^3.4.1",
+    "c3": "^0.6.12",
     "chart.js": "^2.7.3",
     "es6-promise": "^4.2.6",
     "vue": "^2.6.6",
     "vue-apexcharts": "^1.2.9",
+    "vue-c3": "^1.2.11",
     "vue-chartjs": "^3.4.0",
     "vuex": "^3.1.0"
   },
