--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "c3": "^0.6.12",
     "chart.js": "^2.7.3",
     "es6-promise": "^4.2.6",
+    "lodash.clonedeep": "^4.5.0",
     "vue": "^2.6.6",
     "vue-apexcharts": "^1.2.9",
     "vue-chartjs": "^3.4.0",
