--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^2.7.3",
     "es6-promise": "^4.2.6",
     "lodash.clonedeep": "^4.5.0",
+    "plotly.js-dist": "^1.45.0",
     "vue": "^2.6.6",
     "vue-apexcharts": "^1.2.9",
     "vue-chartjs": "^3.4.0",
