--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.6.6",
     "vue-apexcharts": "^1.2.9",
     "vue-chartjs": "^3.4.0",
+    "vue-google-charts": "^0.3.2",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
